--- a/Modúlo 2/Exercicios/Criacao/android.html
+++ b/Modúlo 2/Exercicios/Criacao/android.html
@@ -132,7 +132,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por Gustavo Guanabara, usado por Willian!!</p>
+        <p>Site criado por Gustavo Guanabara, usado por Willian para aprendizado!!</p>
     </footer>
 </body>
 </html>
