--- a/Modúlo 3/Exercicios/ex22/imagens/fundo01.html
+++ b/Modúlo 3/Exercicios/ex22/imagens/fundo01.html
@@ -21,7 +21,7 @@
             background-image: linear-gradient(to bottom, yellow, red);
         }
         div#q3{
-            background-image: url('imagens/git-imagem');
+            background-image: url('imagens/git-imagem.jpeg');
         }
 
     </style>
@@ -34,7 +34,7 @@
     <div class="quadrado" id="q2">
 
     </div>
-    <div class="quadrado" id="">  
+    <div class="quadrado" id="q3">  
 
     </div>
 
