--- a/Modulo 3/ex22/imagens/fundo01.html
+++ b/Modulo 3/ex22/imagens/fundo01.html
@@ -21,7 +21,7 @@
             background-image: linear-gradient(to bottom, yellow, red);
         }
         div#q3{
-            background-image: url('imagens/git-imagem.jpeg');
+            background-image: url('git.imagem.png');
         }
 
     </style>
