--- a/Modulo 3/ex22/imagens/fundo01.html
+++ b/Modulo 3/ex22/imagens/fundo01.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste de fundo de imagem</title>
     <style>
+        body{
+            background-image: url('imagens/._wallpaper002.jpg');
+        }
+
         div.quadrado{
             display: inline-block;
             border: 2px solid black;
@@ -23,7 +27,6 @@
         div#q3{
             background-image: url('git.imagem.png');
         }
-
     </style>
 
 </head>
@@ -35,8 +38,6 @@
 
     </div>
     <div class="quadrado" id="q3">  
-
-    </div>
 
 </body>
 </html>
