--- a/Modulo 3/ex22/imagens/fundo01.html
+++ b/Modulo 3/ex22/imagens/fundo01.html
@@ -27,6 +27,11 @@
         div#q3{
             background-image: url('git.imagem.png');
         }
+    
+        div#q4{
+            background-image: url('git.imagem.xcf');
+        }
+
     </style>
 
 </head>
@@ -37,7 +42,12 @@
     <div class="quadrado" id="q2">
 
     </div>
-    <div class="quadrado" id="q3">  
+    <div class="quadrado" id="q3"> 
+
+    </div>
+    <div class="quadrado" id="q4"> 
+
+    </div>
 
 </body>
 </html>
