add nova imagem

--- a/Modulo 3/ex22/imagens/fundo01.html
+++ b/Modulo 3/ex22/imagens/fundo01.html
@@ -29,7 +29,9 @@
         }
     
         div#q4{
-            background-image: url('git.imagem.xcf');
+            background-image: url('Git.imagemm.png');
+            background-size: 80px 80px;
+            background-repeat: repeat-x, y;
         }
 
     </style>
