--- a/Modulo 3/ex22/imagens/fundo01.html
+++ b/Modulo 3/ex22/imagens/fundo01.html
@@ -7,7 +7,7 @@
     <title>Teste de fundo de imagem</title>
     <style>
         body{
-            background-image: url('imagens/._wallpaper002.jpg');
+            background-image: url('Wall.imagem.jpg');
         }
 
         div.quadrado{
