--- a/Modulo 3/desafio02/index.html
+++ b/Modulo 3/desafio02/index.html
@@ -28,7 +28,7 @@
     </section>
 
 
-    <section class="imagem">
+    <section class="imagem" id="img01">
         <p>
             Não é mais como era antes </br>
             É tudo abreviado </br>
@@ -52,7 +52,7 @@
             Ele vale um alto preço.
         </p>
         <p>
-            Pra piorar a liguagem <br>
+            Pra piorar a linguagem <br>
             O emoticom é um risco <br>
             Tem símbolo para tudo <br>
             Ponto e vírgula e um asterisco <br>
@@ -62,7 +62,7 @@
         </p>
     </section>
 
-    <secition class="imagem">
+    <section class="imagem" id="img02">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -94,5 +94,8 @@
             Deixe que Deus interprete.
         </p>
     </section>
+    <footer>
+        Site Criado por <a href="https://github.com/WillianDoze" target="_blank">Willian Ferreira</a>, através do curso de Curso em video de <a href="https://github.com/gustavoguanabara" target="_blank">Gustavo Guanabara</a>.
+    </footer>
 </body>
 </html>
