--- a/Modulo 4/form07.html
+++ b/Modulo 4/form07.html
@@ -9,40 +9,40 @@
 <body>
     <h1>Exemplos de formulário</h1>
     <form action="cadastro.php" method="get" autocomplete="on">
-        <p>
-            <label for="iest">Estados</label>
-            <select name="estado" id="iest">
-
-                <label for="Região Sudeste">
-                    <option value="MG">Minas Gerais</option>
-                    <option value="RJ">Rio de Janeiro</option>
-                    <option value="SP">São Paulo</option>
-                </label>
-                <label for="Região Nordeste">
-                    <option value="MA">Maranhão</option>
-                    <option value="PE">Pernanbuco</option>
-                    <option value="RN">Rio Grande do Norte</option>
-                </label>
-            </select>
-        </p>
-        <p>
-            <label for="iprof">Profissão</label>
-            <input type="text" name="prof" id="iprof" list="lstprof">
-            <datalist id="lstprof">
-                <option>Administrador</option>
-                <option>Contabilista</option>
-                <option>Desenvolvedor</option>
-                <option>Professor</option>
-            </datalist>
-        </p>
-        <p>
-            <label for="imsg">Mensagem:</label>
-            <textarea name="msg" id="imsg" cols="30" rows="10"></textarea>
-        </p>
-        <p>
-            <input type="submit" value="Enviar">
-            <input type="reset" value="Limpar">
-        </p>
+    <p>
+    <label for="iest">Estados</label>
+        <select name="estado" id="iest">
+        <option value=""select>--- Escolha ---</option>
+        <optgroup label="Região Sudeste">
+            <option value="MG">Minas Gerais</option>
+            <option value="RJ">Rio de Janeiro</option>
+            <option value="SP">São Paulo</option>
+        </optgroup>
+        <optgroup label="Região Nordeste">
+            <option value="MA">Maranhão</option>
+            <option value="PE">Pernanbuco</option>
+            <option value="RN">Rio Grande do Norte</option>
+        </optgroup>
+        </select>
+    </p>
+    <p>
+    <label for="iprof">Profissão</label>
+        <input type="text" name="prof" id="iprof" list="lstprof">
+        <datalist id="lstprof"> 
+            <option>Administrador</option>
+            <option>Contabilista</option>
+            <option>Desenvolvedor</option>
+            <option>Professor</option>
+        </datalist>
+    </p>
+    <p>
+        <label for="imsg">Mensagem:</label>
+        <textarea name="msg" id="imsg" cols="30" rows="10"></textarea>
+    </p>
+    <p>
+        <input type="submit" value="Enviar">
+        <input type="reset" value="Limpar">
+    </p>
 
     </form>
 </body>
