Atualizações dos exercícios.

--- a/Modulo 4/exer26/mq05/index.html
+++ b/Modulo 4/exer26/mq05/index.html
@@ -7,12 +7,13 @@
     <title>Media Query</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
-<body>
+<body onresize="mudouTamanho()">
     <header>
         <h1>Meu Site</h1>
-        <i class="material-icons">menu</i>
-        <menu>
+        <i id="burguer" class="material-icons" onclick="clickMenu()">menu</i>
+        <menu id="itens">
             <ul>
                 <li><a href="#">Opção 1</a></li>
                 <li><a href="#">Opção 2</a></li>
@@ -29,17 +30,45 @@
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum odit in saepe non, placeat delectus doloribus fuga nesciunt quaerat, reiciendis repudiandae ratione aperiam eius enim ipsum qui reprehenderit provident. Suscipit?
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem nihil, quia ducimus inventore architecto alias officia debitis tempora, eveniet maiores delectus impedit vero adipisci quam neque. Animi, ducimus quibusdam? Dicta?
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum architecto fuga vel dolore. Optio iusto recusandae dolores reprehenderit quia voluptatibus porro, quae, ea asperiores animi at officia dolore obcaecati placeat!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. A odio voluptates nesciunt placeat libero, esse quod exercitationem dolore repellat soluta, repudiandae animi quae minima optio in sunt beatae. Deserunt, sequi.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatem, eum veritatis culpa quis perferendis fugiat ut numquam exercitationem. Optio atque eligendi recusandae odit modi, in similique deserunt voluptatum tenetur!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. A odio voluptates nesciunt placeat libero, esse quod exercitationem dolore repellat soluta, repudiandae animi quae minima optio in sunt beatae. Deserunt, sequi.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatem, eum veritatis culpa quis perferendis fugiat ut numquam exercitationem. Optio atque eligendi recusandae odit modi, in similique deserunt voluptatum tenetur!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. A odio voluptates nesciunt placeat libero, esse quod exercitationem dolore repellat soluta, repudiandae animi quae minima optio in sunt beatae. Deserunt, sequi.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatem, eum veritatis culpa quis perferendis fugiat ut numquam exercitationem. Optio atque eligendi recusandae odit modi, in similique deserunt voluptatum tenetur!
             </p>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique magni nam, porro quod distinctio nostrum nemo natus debitis molestias ex nulla voluptate asperiores voluptas libero. Minima ad veritatis accusantium temporibus.
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui facere necessitatibus eveniet, hic sed nihil voluptate vel, dicta molestiae distinctio provident aliquam, cupiditate quae id est sunt ratione molestias ipsam?
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui ad consequuntur blanditiis temporibus reiciendis itaque repellendus, aliquam ipsa praesentium voluptates ipsum deserunt eius quam atque omnis unde dolores pariatur molestiae.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. A odio voluptates nesciunt placeat libero, esse quod exercitationem dolore repellat soluta, repudiandae animi quae minima optio in sunt beatae. Deserunt, sequi.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatem, eum veritatis culpa quis perferendis fugiat ut numquam exercitationem. Optio atque eligendi recusandae odit modi, in similique deserunt voluptatum tenetur!
             </p>
             <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. A odio voluptates nesciunt placeat libero, esse quod exercitationem dolore repellat soluta, repudiandae animi quae minima optio in sunt beatae. Deserunt, sequi.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatem, eum veritatis culpa quis perferendis fugiat ut numquam exercitationem. Optio atque eligendi recusandae odit modi, in similique deserunt voluptatum tenetur!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. A odio voluptates nesciunt placeat libero, esse quod exercitationem dolore repellat soluta, repudiandae animi quae minima optio in sunt beatae. Deserunt, sequi.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatem, eum veritatis culpa quis perferendis fugiat ut numquam exercitationem. Optio atque eligendi recusandae odit modi, in similique deserunt voluptatum tenetur!
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. A odio voluptates nesciunt placeat libero, esse quod exercitationem dolore repellat soluta, repudiandae animi quae minima optio in sunt beatae. Deserunt, sequi.
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem voluptatem, eum veritatis culpa quis perferendis fugiat ut numquam exercitationem. Optio atque eligendi recusandae odit modi, in similique deserunt voluptatum tenetur!
             </p>
         </article>
     </main>
+    <script>
+        function mudouTamanho(){
+            if(window.innerWidth >=768){
+                itens.style.display = 'block'
+            }else{
+                itens.style.block = 'none'
+            }
+        }
+        function clickMenu() {
+            if(itens.style.display == 'block'){
+                itens.style.display = 'none'
+            }else{
+                itens.style.display = 'block'
+            }
+        }
+    </script>
 </body>
 </html>
