--- a/Modulo 4/exer26/mq05/index.html
+++ b/Modulo 4/exer26/mq05/index.html
@@ -54,21 +54,6 @@
             </p>
         </article>
     </main>
-    <script>
-        function mudouTamanho(){
-            if(window.innerWidth >=768){
-                itens.style.display = 'block'
-            }else{
-                itens.style.block = 'none'
-            }
-        }
-        function clickMenu() {
-            if(itens.style.display == 'block'){
-                itens.style.display = 'none'
-            }else{
-                itens.style.display = 'block'
-            }
-        }
-    </script>
+    <script src="js/script.js"></script>
 </body>
 </html>
