--- a/Modulo 4/exer26/mq05/index.html
+++ b/Modulo 4/exer26/mq05/index.html
@@ -11,15 +11,15 @@
 </head>
 <body onresize="mudouTamanho()">
     <header>
-        <h1>Meu Site</h1>
+        <h1>Minhas redes sociais</h1>
         <i id="burguer" class="material-icons" onclick="clickMenu()">menu</i>
         <menu id="itens">
             <ul>
-                <li><a href="#">Opção 1</a></li>
-                <li><a href="#">Opção 2</a></li>
-                <li><a href="#">Opção 3</a></li>
-                <li><a href="#">Opção 4</a></li>
-                <li><a href="#">Opção 5</a></li>
+                <li><a href="https://www.google.com" target="_blank">Opção 1</a></li>
+                <li><a href="https://www.youtube.com" target="_blank">Opção 2</a></li>
+                <li><a href="https://www.instagram.com" target="_blank">Opção 3</a></li>
+                <li><a href="https://www.twitter.com" target="_blank">Opção 4</a></li>
+                <li><a href="https://www.facebook.com" target="_blank">Opção 5</a></li>
             </ul>
         </menu>
     </header>
